source/main/default/objects/TriggerSettings__c/fields/DisableAllTriggers__c.field-meta.xml
<CustomField>
    <fullName>DisableAllTriggers__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Disable all Triggers</label>
    <type>Checkbox</type>
</CustomField>