source/main/default/objects/TriggerSettings__c/fields/DisabledHandlers__c.field-meta.xml
<CustomField>
    <fullName>DisabledHandlers__c</fullName>
    <description>Used for temporary disabling of selective Trigger Handlers</description>
    <inlineHelpText>Separated with &quot;;&quot;</inlineHelpText>
    <label>Disabled Handlers</label>
    <type>TextArea</type>
</CustomField>