source/main/default/objects/TriggerSettings__c/fields/DisabledObjects__c.field-meta.xml
<CustomField>
    <fullName>DisabledObjects__c</fullName>
    <inlineHelpText>Please separate with &quot;;&quot;</inlineHelpText>
    <label>Disabled Objects</label>
    <type>TextArea</type>
</CustomField>